Remove width limit on wiki-content; Fix overlapping h1

--- a/app/assets/stylesheets/_misc_legacy.sass
+++ b/app/assets/stylesheets/_misc_legacy.sass
@@ -599,11 +599,6 @@ div.indent
       margin-left: 10px
       padding-top: 0
 
-#content
-  .wiki-content
-    p, li
-      width: 700px
-
 /*Cost-Plugin specific styles */
 
 input::-webkit-input-placeholder, :-moz-placeholder
